Fixed overflow for Firefox

--- a/MomentumClone.css
+++ b/MomentumClone.css
@@ -114,7 +114,7 @@ h1, h2, h3{
 @media (min-width: 30em){
   /*480 px*/
   #time{
-    font-size: 10em;
+    font-size: 9em;
   }
 
   #greeting{
